# backend/api/gen/go/admin/service/v1/i_account_http.pb.go
@@ -28,6 +28,8 @@ const OperationAccountServiceDelete = "/admin.service.v1.AccountService/Delete"
 const OperationAccountServiceGet = "/admin.service.v1.AccountService/Get"
 const OperationAccountServiceList = "/admin.service.v1.AccountService/List"
 const OperationAccountServiceListAll = "/admin.service.v1.AccountService/ListAll"
+const OperationAccountServiceOverview = "/admin.service.v1.AccountService/Overview"
+const OperationAccountServiceStatistics = "/admin.service.v1.AccountService/Statistics"
 const OperationAccountServiceToggle = "/admin.service.v1.AccountService/Toggle"
 const OperationAccountServiceToggleCanExpense = "/admin.service.v1.AccountService/ToggleCanExpense"
 const OperationAccountServiceToggleCanIncome = "/admin.service.v1.AccountService/ToggleCanIncome"
@@ -43,6 +45,8 @@ type AccountServiceHTTPServer interface {
 	Get(context.Context, *v11.GetAccountRequest) (*v11.Account, error)
 	List(context.Context, *v1.PagingRequest) (*v11.ListAccountResponse, error)
 	ListAll(context.Context, *v11.ListAllAccountRequest) (*v11.ListAccountResponse, error)
+	Overview(context.Context, *v11.OverviewRequest) (*v11.OverviewResponse, error)
+	Statistics(context.Context, *v11.AccountStatisticsRequest) (*v11.AccountStatisticsResponse, error)
 	Toggle(context.Context, *v11.ToggleAccountRequest) (*v11.Account, error)
 	ToggleCanExpense(context.Context, *v11.ToggleAccountRequest) (*v11.Account, error)
 	ToggleCanIncome(context.Context, *v11.ToggleAccountRequest) (*v11.Account, error)
@@ -67,6 +71,8 @@ func RegisterAccountServiceHTTPServer(s *http.Server, srv AccountServiceHTTPServ
 	r.PATCH("/admin/v1/accounts/{id}/toggle-can-transfer-from", _AccountService_ToggleCanTransferFrom0_HTTP_Handler(srv))
 	r.PATCH("/admin/v1/accounts/{id}/toggle-can-transfer-to", _AccountService_ToggleCanTransferTo0_HTTP_Handler(srv))
 	r.POST("/admin/v1/accounts/{id}/adjust", _AccountService_AdjustBalance0_HTTP_Handler(srv))
+	r.GET("/admin/v1/accounts/overview", _AccountService_Overview0_HTTP_Handler(srv))
+	r.GET("/admin/v1/accounts/statistics", _AccountService_Statistics0_HTTP_Handler(srv))
 }
 
 func _AccountService_List0_HTTP_Handler(srv AccountServiceHTTPServer) func(ctx http.Context) error {
@@ -373,6 +379,44 @@ func _AccountService_AdjustBalance0_HTTP_Handler(srv AccountServiceHTTPServer) f
 	}
 }
 
+func _AccountService_Overview0_HTTP_Handler(srv AccountServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in v11.OverviewRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAccountServiceOverview)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Overview(ctx, req.(*v11.OverviewRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*v11.OverviewResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _AccountService_Statistics0_HTTP_Handler(srv AccountServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in v11.AccountStatisticsRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAccountServiceStatistics)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Statistics(ctx, req.(*v11.AccountStatisticsRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*v11.AccountStatisticsResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
 type AccountServiceHTTPClient interface {
 	AdjustBalance(ctx context.Context, req *v11.AdjustBalanceRequest, opts ...http.CallOption) (rsp *v11.Account, err error)
 	Create(ctx context.Context, req *v11.CreateAccountRequest, opts ...http.CallOption) (rsp *v11.Account, err error)
@@ -380,6 +424,8 @@ type AccountServiceHTTPClient interface {
 	Get(ctx context.Context, req *v11.GetAccountRequest, opts ...http.CallOption) (rsp *v11.Account, err error)
 	List(ctx context.Context, req *v1.PagingRequest, opts ...http.CallOption) (rsp *v11.ListAccountResponse, err error)
 	ListAll(ctx context.Context, req *v11.ListAllAccountRequest, opts ...http.CallOption) (rsp *v11.ListAccountResponse, err error)
+	Overview(ctx context.Context, req *v11.OverviewRequest, opts ...http.CallOption) (rsp *v11.OverviewResponse, err error)
+	Statistics(ctx context.Context, req *v11.AccountStatisticsRequest, opts ...http.CallOption) (rsp *v11.AccountStatisticsResponse, err error)
 	Toggle(ctx context.Context, req *v11.ToggleAccountRequest, opts ...http.CallOption) (rsp *v11.Account, err error)
 	ToggleCanExpense(ctx context.Context, req *v11.ToggleAccountRequest, opts ...http.CallOption) (rsp *v11.Account, err error)
 	ToggleCanIncome(ctx context.Context, req *v11.ToggleAccountRequest, opts ...http.CallOption) (rsp *v11.Account, err error)
@@ -467,6 +513,32 @@ func (c *AccountServiceHTTPClientImpl) ListAll(ctx context.Context, in *v11.List
 	pattern := "/admin/v1/accounts/all"
 	path := binding.EncodeURL(pattern, in, true)
 	opts = append(opts, http.Operation(OperationAccountServiceListAll))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AccountServiceHTTPClientImpl) Overview(ctx context.Context, in *v11.OverviewRequest, opts ...http.CallOption) (*v11.OverviewResponse, error) {
+	var out v11.OverviewResponse
+	pattern := "/admin/v1/accounts/overview"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationAccountServiceOverview))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AccountServiceHTTPClientImpl) Statistics(ctx context.Context, in *v11.AccountStatisticsRequest, opts ...http.CallOption) (*v11.AccountStatisticsResponse, error) {
+	var out v11.AccountStatisticsResponse
+	pattern := "/admin/v1/accounts/statistics"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationAccountServiceStatistics))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
