# backend/api/gen/go/app/service/v1/i_account_grpc.pb.go
@@ -30,6 +30,8 @@ const (
 	AccountService_Delete_FullMethodName        = "/app.service.v1.AccountService/Delete"
 	AccountService_Toggle_FullMethodName        = "/app.service.v1.AccountService/Toggle"
 	AccountService_AdjustBalance_FullMethodName = "/app.service.v1.AccountService/AdjustBalance"
+	AccountService_Overview_FullMethodName      = "/app.service.v1.AccountService/Overview"
+	AccountService_Statistics_FullMethodName    = "/app.service.v1.AccountService/Statistics"
 )
 
 // AccountServiceClient is the client API for AccountService service.
@@ -44,6 +46,8 @@ type AccountServiceClient interface {
 	Delete(ctx context.Context, in *v11.DeleteAccountRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
 	Toggle(ctx context.Context, in *v11.ToggleAccountRequest, opts ...grpc.CallOption) (*v11.Account, error)
 	AdjustBalance(ctx context.Context, in *v11.AdjustBalanceRequest, opts ...grpc.CallOption) (*v11.Account, error)
+	Overview(ctx context.Context, in *v11.OverviewRequest, opts ...grpc.CallOption) (*v11.OverviewResponse, error)
+	Statistics(ctx context.Context, in *v11.AccountStatisticsRequest, opts ...grpc.CallOption) (*v11.AccountStatisticsResponse, error)
 }
 
 type accountServiceClient struct {
@@ -134,6 +138,26 @@ func (c *accountServiceClient) AdjustBalance(ctx context.Context, in *v11.Adjust
 	return out, nil
 }
 
+func (c *accountServiceClient) Overview(ctx context.Context, in *v11.OverviewRequest, opts ...grpc.CallOption) (*v11.OverviewResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(v11.OverviewResponse)
+	err := c.cc.Invoke(ctx, AccountService_Overview_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *accountServiceClient) Statistics(ctx context.Context, in *v11.AccountStatisticsRequest, opts ...grpc.CallOption) (*v11.AccountStatisticsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(v11.AccountStatisticsResponse)
+	err := c.cc.Invoke(ctx, AccountService_Statistics_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // AccountServiceServer is the server API for AccountService service.
 // All implementations must embed UnimplementedAccountServiceServer
 // for forward compatibility.
@@ -146,6 +170,8 @@ type AccountServiceServer interface {
 	Delete(context.Context, *v11.DeleteAccountRequest) (*emptypb.Empty, error)
 	Toggle(context.Context, *v11.ToggleAccountRequest) (*v11.Account, error)
 	AdjustBalance(context.Context, *v11.AdjustBalanceRequest) (*v11.Account, error)
+	Overview(context.Context, *v11.OverviewRequest) (*v11.OverviewResponse, error)
+	Statistics(context.Context, *v11.AccountStatisticsRequest) (*v11.AccountStatisticsResponse, error)
 	mustEmbedUnimplementedAccountServiceServer()
 }
 
@@ -179,6 +205,12 @@ func (UnimplementedAccountServiceServer) Toggle(context.Context, *v11.ToggleAcco
 }
 func (UnimplementedAccountServiceServer) AdjustBalance(context.Context, *v11.AdjustBalanceRequest) (*v11.Account, error) {
 	return nil, status.Error(codes.Unimplemented, "method AdjustBalance not implemented")
+}
+func (UnimplementedAccountServiceServer) Overview(context.Context, *v11.OverviewRequest) (*v11.OverviewResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method Overview not implemented")
+}
+func (UnimplementedAccountServiceServer) Statistics(context.Context, *v11.AccountStatisticsRequest) (*v11.AccountStatisticsResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method Statistics not implemented")
 }
 func (UnimplementedAccountServiceServer) mustEmbedUnimplementedAccountServiceServer() {}
 func (UnimplementedAccountServiceServer) testEmbeddedByValue()                        {}
@@ -345,6 +377,42 @@ func _AccountService_AdjustBalance_Handler(srv interface{}, ctx context.Context,
 	return interceptor(ctx, in, info, handler)
 }
 
+func _AccountService_Overview_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(v11.OverviewRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AccountServiceServer).Overview(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: AccountService_Overview_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AccountServiceServer).Overview(ctx, req.(*v11.OverviewRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _AccountService_Statistics_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(v11.AccountStatisticsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AccountServiceServer).Statistics(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: AccountService_Statistics_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AccountServiceServer).Statistics(ctx, req.(*v11.AccountStatisticsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // AccountService_ServiceDesc is the grpc.ServiceDesc for AccountService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -383,6 +451,14 @@ var AccountService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "AdjustBalance",
 			Handler:    _AccountService_AdjustBalance_Handler,
+		},
+		{
+			MethodName: "Overview",
+			Handler:    _AccountService_Overview_Handler,
+		},
+		{
+			MethodName: "Statistics",
+			Handler:    _AccountService_Statistics_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
