# backend/api/gen/go/app/service/v1/i_account_http.pb.go
@@ -28,6 +28,8 @@ const OperationAccountServiceDelete = "/app.service.v1.AccountService/Delete"
 const OperationAccountServiceGet = "/app.service.v1.AccountService/Get"
 const OperationAccountServiceList = "/app.service.v1.AccountService/List"
 const OperationAccountServiceListAll = "/app.service.v1.AccountService/ListAll"
+const OperationAccountServiceOverview = "/app.service.v1.AccountService/Overview"
+const OperationAccountServiceStatistics = "/app.service.v1.AccountService/Statistics"
 const OperationAccountServiceToggle = "/app.service.v1.AccountService/Toggle"
 const OperationAccountServiceUpdate = "/app.service.v1.AccountService/Update"
 
@@ -38,6 +40,8 @@ type AccountServiceHTTPServer interface {
 	Get(context.Context, *v11.GetAccountRequest) (*v11.Account, error)
 	List(context.Context, *v1.PagingRequest) (*v11.ListAccountResponse, error)
 	ListAll(context.Context, *v11.ListAllAccountRequest) (*v11.ListAccountResponse, error)
+	Overview(context.Context, *v11.OverviewRequest) (*v11.OverviewResponse, error)
+	Statistics(context.Context, *v11.AccountStatisticsRequest) (*v11.AccountStatisticsResponse, error)
 	Toggle(context.Context, *v11.ToggleAccountRequest) (*v11.Account, error)
 	Update(context.Context, *v11.UpdateAccountRequest) (*v11.Account, error)
 }
@@ -52,6 +56,8 @@ func RegisterAccountServiceHTTPServer(s *http.Server, srv AccountServiceHTTPServ
 	r.DELETE("/app/v1/accounts/{id}", _AccountService_Delete0_HTTP_Handler(srv))
 	r.PATCH("/app/v1/accounts/{id}/toggle", _AccountService_Toggle0_HTTP_Handler(srv))
 	r.POST("/app/v1/accounts/{id}/adjust", _AccountService_AdjustBalance0_HTTP_Handler(srv))
+	r.GET("/app/v1/accounts/overview", _AccountService_Overview0_HTTP_Handler(srv))
+	r.GET("/app/v1/accounts/statistics", _AccountService_Statistics0_HTTP_Handler(srv))
 }
 
 func _AccountService_List0_HTTP_Handler(srv AccountServiceHTTPServer) func(ctx http.Context) error {
@@ -233,6 +239,44 @@ func _AccountService_AdjustBalance0_HTTP_Handler(srv AccountServiceHTTPServer) f
 	}
 }
 
+func _AccountService_Overview0_HTTP_Handler(srv AccountServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in v11.OverviewRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAccountServiceOverview)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Overview(ctx, req.(*v11.OverviewRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*v11.OverviewResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _AccountService_Statistics0_HTTP_Handler(srv AccountServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in v11.AccountStatisticsRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAccountServiceStatistics)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Statistics(ctx, req.(*v11.AccountStatisticsRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*v11.AccountStatisticsResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
 type AccountServiceHTTPClient interface {
 	AdjustBalance(ctx context.Context, req *v11.AdjustBalanceRequest, opts ...http.CallOption) (rsp *v11.Account, err error)
 	Create(ctx context.Context, req *v11.CreateAccountRequest, opts ...http.CallOption) (rsp *v11.Account, err error)
@@ -240,6 +284,8 @@ type AccountServiceHTTPClient interface {
 	Get(ctx context.Context, req *v11.GetAccountRequest, opts ...http.CallOption) (rsp *v11.Account, err error)
 	List(ctx context.Context, req *v1.PagingRequest, opts ...http.CallOption) (rsp *v11.ListAccountResponse, err error)
 	ListAll(ctx context.Context, req *v11.ListAllAccountRequest, opts ...http.CallOption) (rsp *v11.ListAccountResponse, err error)
+	Overview(ctx context.Context, req *v11.OverviewRequest, opts ...http.CallOption) (rsp *v11.OverviewResponse, err error)
+	Statistics(ctx context.Context, req *v11.AccountStatisticsRequest, opts ...http.CallOption) (rsp *v11.AccountStatisticsResponse, err error)
 	Toggle(ctx context.Context, req *v11.ToggleAccountRequest, opts ...http.CallOption) (rsp *v11.Account, err error)
 	Update(ctx context.Context, req *v11.UpdateAccountRequest, opts ...http.CallOption) (rsp *v11.Account, err error)
 }
@@ -322,6 +368,32 @@ func (c *AccountServiceHTTPClientImpl) ListAll(ctx context.Context, in *v11.List
 	pattern := "/app/v1/accounts/all"
 	path := binding.EncodeURL(pattern, in, true)
 	opts = append(opts, http.Operation(OperationAccountServiceListAll))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AccountServiceHTTPClientImpl) Overview(ctx context.Context, in *v11.OverviewRequest, opts ...http.CallOption) (*v11.OverviewResponse, error) {
+	var out v11.OverviewResponse
+	pattern := "/app/v1/accounts/overview"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationAccountServiceOverview))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AccountServiceHTTPClientImpl) Statistics(ctx context.Context, in *v11.AccountStatisticsRequest, opts ...http.CallOption) (*v11.AccountStatisticsResponse, error) {
+	var out v11.AccountStatisticsResponse
+	pattern := "/app/v1/accounts/statistics"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationAccountServiceStatistics))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
